syntax = "proto3";

package calculator;

option go_package = "pkg/calculatorpb";

message Instruction {
  string type = 1;
  string op = 2;
  string var = 3;
  oneof left {
    int64 left_val = 4;
    string left_var = 5;
  }
  oneof right {
    int64 right_val = 6;
    string right_var = 7;
  }
}

message CalculationRequest {
  repeated Instruction instructions = 1;
}

message ResultItem {
  string var = 1;
  int64 value = 2;
}

message CalculationResponse {
  repeated ResultItem items = 1;
}

service CalculatorService {
  rpc Calculate(CalculationRequest) returns (CalculationResponse);
}